--- a/public/style.css
+++ b/public/style.css
@@ -435,5 +435,5 @@ input:checked + .slider::after {
 }
 /* ===== SPACE BETWEEN TODAY WORKOUT BOX AND BOTTOM OF PLANNER CARD ===== */
 .planner-card .planner-preview {
-  margin-bottom: 24px !important; /* adjust for desired gap */
+  margin-bottom: 100x !important; /* adjust for desired gap */
 }
